# chess-nn-playground

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  URGENT.md  launch_remaining_primitive_implementation_batches.sh  pyproject.toml  requirements.txt  run_all.sh  run_bt4_primitive_mixers.sh  run_cpu_benchmark.sh  run_falsifier_i018.sh  run_hybrid_i018.sh  run_i249_fast.sh  run_lc0_bt4_transformer.sh  run_paper_grade_top3.sh  run_primitive_implementation_with_claude.sh  run_primitive_pipeline.sh  run_research_primitive_implementation_with_claude.sh  run_trunk_pipeline.sh  run_trunk_sweep.sh
.github/: CODEOWNERS  pull_request_template.md
config/: cli.config.toml
configs/: README.md
data/: README.md
docs/: KNOWLEDGE.md  README.md  crtk_export_contract.md  engineering_audit_2026-05-16.md  experimental_training_pipeline.md  export_training_data_from_stacks.md  puzzle_binary_benchmark_goal.md  reliable_training_protocol.md  repo_layout.md  research_audit_2026-05-09.md  research_reassessment_2026-05-06.md
ideas/: ALL_IDEAS.md  INDEX.md  README.md  TODO.md  WORKFLOW.md  architecture_conformance_audit.json  architecture_conformance_audit.md  chatgpt_pro_deep_math_research_prompt.md  idea_generation_prompt.md  implementation_audit.json  implementation_audit.md  registry.jsonl
reports/: EXPERIMENT_REPORT.md  README.md  idea_conformance_audit.json  idea_conformance_audit.md  project_reframing_memo.tex
results/: README.md
scripts/: README.md  __init__.py  _bootstrap.py  _substitute_ablations.py  analyze_matched_recall_fp.py  analyze_per_class_benchmark.py  analyze_pr_auc_reselection.py  benchmark_cpu_inference.py  benchmark_scale_up_speed.py  build_paper_report_latex.py  build_paper_report_latex_zh.py  build_paper_report_pdf.py  build_scout_all_runs_summary.py  build_scout_report_html.py  compare_results.py  evaluate_i242.py  evaluate_i242_ablations.py  monitor_self_schedule.sh  plot_per_class_heatmap.py  plot_per_class_heatmap_pretty.py  render_puzzle_class_examples.py  run_experiment_suite.py  run_i242_ablations.sh  run_paper_ready_all.py  train_model.py  validate_run_artifacts.py  validate_training_config.py
tests/: README.md  test_agent_automation_isolation.py  test_attack_ray_sparse_attention.py  test_axial_rank_file_convnet.py  test_benchmark_contracts.py  test_benchmark_models.py  test_bispectral_phase_coupling_board_network.py  test_blocker_reset_ray_scan.py  test_board_features.py  test_board_fpn_cnn.py  test_bounded_board_hinge_logic.py  test_bt4_distill_student.py  test_candidate_move_forcedness.py  test_candidate_move_forcedness_sheaf.py  test_canonical_orbit_st_operator.py  test_channel_dropout_consensus_network.py  test_cnn_forward.py  test_codex_reply_primitives_operators.py  test_commutative_view_consistency_network.py  test_compare_results.py  test_complex_amplitude_chess_network.py  test_config_validation.py  test_conservation_nullspace_norm.py  test_cpu_oom_fallback.py  test_dataset.py  test_defender_overload_triad.py  (+100 more)
(+6669 files in other folders)
