[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-nn-playground"
version = "0.1.0"
description = "Foundational research environment for chess neural network experiments."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "LenniAConrad" },
]
keywords = ["chess", "machine-learning", "neural-networks", "pytorch", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "ijson>=3.2",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=14",
  "python-chess>=1.999",
  "PyYAML>=6",
  "scikit-learn>=1.3",
  "torch>=2.2",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "ruff>=0.8",
]
test = [
  "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/LenniAConrad/chess-nn-playground"
Repository = "https://github.com/LenniAConrad/chess-nn-playground"

[project.scripts]
chess-nn-train = "scripts.train_model:main"
chess-nn-run-suite = "scripts.run_experiment_suite:main"
chess-nn-paper-ready = "scripts.run_paper_ready_all:main"
chess-nn-compare-results = "scripts.compare_results:main"
chess-nn-validate-config = "scripts.validate_training_config:main"
chess-nn-validate-run = "scripts.validate_run_artifacts:main"
chess-nn-build-flop-report = "scripts.reports.build_flop_report:main"
chess-nn-build-paper-report = "scripts.reports.build_paper_report:main"
chess-nn-plot-training = "scripts.reports.plot_training_results:main"
chess-nn-build-idea-catalog = "scripts.ideas.build_idea_catalog:main"
chess-nn-audit-ideas = "scripts.ideas.audit_implementation_kinds:main"
chess-nn-audit-architectures = "scripts.ideas.audit_architecture_conformance:main"

[dependency-groups]
dev = [
  "build>=1.2",
  "pytest>=8",
  "ruff>=0.8",
]
test = [
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
  "data",
  "results",
  "reports",
]

[tool.ruff.lint]
select = [
  "E9",
  "F63",
  "F7",
  "F82",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["chess_nn_playground*", "scripts*"]
